--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     
     <main>
-        <div id="img" style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
-            <img width="280px" height="300px" src="images/anike7.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike1.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike6.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike4.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike5.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike3.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike2.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike8.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike9.jpg" alt="herimage">
-            <img width="280px" height="300px" src="images/anike10.jpg" alt="herimage">
+        <div id="img" style="display: grid; grid-template-columns: 1fr 1fr;">
+            <img width="140px" height="150px" src="images/anike7.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike1.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike6.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike4.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike5.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike3.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike2.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike8.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike9.jpg" alt="herimage">
+            <img width="140px" height="150px" src="images/anike10.jpg" alt="herimage">
         </div>
 
         <div id="div2">
