--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>OH MY GOD</h2>
         <H1 style="color: yellow;">SPECIAL DAY FOR PRETTY LADY</H1>
 
-        <H5><marquee behavior="" direction="">HAPPY BIRTHDAY TO YOU ! HAPPY BIRTHDAY TO YOU !! HAPPY BIRTHDAY TO YOU <b>KAOTHAR</b> HAPPY BIRTHDAY TO YOU !!!</marquee></H5>
+        <H5><marquee behavior="" direction="">HAPPY BIRTHDAY TO YOU ! HAPPY BIRTHDAY TO YOU !! HAPPY BIRTHDAY TO YOU <b>KAOTHAR</b> HAPPY BIRTHDAY TO YOU !!! <b style="color: yellow;">#31/10</b></marquee></H5>
     </header>
     
     <main>
@@ -30,7 +30,15 @@
             <img width="140px" height="150px" src="images/anike10.jpg" alt="herimage">
         </div>
 
-        <div id="div2">
+        <button onclick="msg()">Click Here to Wish Me</button>
+
+        <div>
+            <ul>
+                <li><h4 id="nameinput"></h4></li><hr>
+            </ul>
+        </div>
+
+        <!-- <div id="div2">
             <H2>LETS CELEBRATE WITH HE CELEBRANT</H2><br><br>
             <h4>Lets show our concern by giving her a birtday wish</h4>
         </div>
@@ -40,12 +48,14 @@
             <label for="text"><input width="300px" height="80px" type="text" name="text" id="text"></label>
             <label for="sender">Sender</label><input type="text" name="sender" id="sender" placeholder="Input your name here">
 
-        </div>
+        </div> -->
     </main>
 
     <footer>
         <h3>We wish you many happy returns of the day, long life and prosperity</h3>
         <h2>Hipp ! Hipp !! Hipp !!! <strong style="color: red;">(HURRAY)</strong></h2>
+        <p style="color: tomato; font-size: 18px; background-color: white;">Desiged by: Secodary_school_friends</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
