--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </main>
 
     <footer>
-        <h3>We wish you many happy returns of the day, long life and prosperity</h3>
-        <h2>Hipp ! Hipp !! Hipp !!! <strong style="color: red;">(HURRAY)</strong></h2>
+        <h3 style="background-color: palevioletred;">We wish you many happy returns of the day, long life and prosperity</h3>
+        <h2 style="background-color: palevioletred;">Hipp ! Hipp !! Hipp !!! <strong style="color: red;">(HURRAY)</strong></h2>
         <p style="color: tomato; font-size: 18px; background-color: white;">Desiged by: Secodary_school_friends</p>
     </footer>
     <script src="script.js"></script>
