--- a/index.html
+++ b/index.html
@@ -30,25 +30,23 @@
             <img width="140px" height="150px" src="images/anike10.jpg" alt="herimage">
         </div>
 
-        <button onclick="msg()">Click Here to Wish Me</button>
+        <!-- <button onclick="msg()">Click Here to Wish Me</button>
 
         <div>
             <ul>
                 <li><h4 id="nameinput"></h4></li><hr>
             </ul>
-        </div>
-
-        <!-- <div id="div2">
-            <H2>LETS CELEBRATE WITH HE CELEBRANT</H2><br><br>
-            <h4>Lets show our concern by giving her a birtday wish</h4>
-        </div>
-
-        <div id="sec2">
-            <h3>Put your birtday wishes here (Messages are absolutely cost free)</h3>
-            <label for="text"><input width="300px" height="80px" type="text" name="text" id="text"></label>
-            <label for="sender">Sender</label><input type="text" name="sender" id="sender" placeholder="Input your name here">
-
         </div> -->
+
+        <form id="new_task">
+            <input id="task" autocomplete="off" autofocus placeholder="Input your name">
+            <input id="taskmessage" autocomplete="off" autofocus placeholder="Write a message here">
+            <input type="submit" value="Submit">
+        </form>
+        <ul id="tasks">
+
+        </ul>
+
     </main>
 
     <footer>
