--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img width="140px" height="150px" src="images/anike9.jpg" alt="herimage">
             <img width="140px" height="150px" src="images/anike10.jpg" alt="herimage">
         </div>
-
+        <br><br>
         <!-- <button onclick="msg()">Click Here to Wish Me</button>
 
         <div>
@@ -38,10 +38,10 @@
             </ul>
         </div> -->
 
-        <form id="new_task">
-            <input id="task" autocomplete="off" autofocus placeholder="Input your name">
-            <input id="taskmessage" autocomplete="off" autofocus placeholder="Write a message here">
-            <input type="submit" value="Submit">
+        <form style="margin-left: 15px;" id="new_task">
+            <input id="task" autocomplete="off" autofocus placeholder="Input your name"><br><br>
+            <input id="taskmessage" autocomplete="off" autofocus placeholder="Write a message here"> <br><br>
+            <input type="submit" value="Submit"><br><br>
         </form>
         <ul id="tasks">
 
