email worked out

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </div> -->
 
-        <form style="margin-left: 15px;" id="new_task">
+        <form method="POST" action="mailto:jelmah00@gmail.com" enctype="multipart/form-data" name="emailform" style="margin-left: 15px;" id="new_task">
             <input id="task" autocomplete="off" autofocus placeholder="Input your name"><br><br>
             <input id="taskmessage" autocomplete="off" autofocus placeholder="Write a message here"> <br><br>
             <input type="submit" value="Submit"><br><br>
